src/test/deca/syntax/invalid/test_synt31.deca
//Resultat:
//      Erreur syntaxique : ligne 5
class A {
int method(float y){
return y;
}
int return 1;
}